21 October 2001
- features
	o show grid if show grid option is enabled.
- bug fixes
	o the x parameter for text was wrong.
	o landscape / portrait : the element were not in the good place in landscape mode.

20 October 2001
- features
	o text style (bold, italic, font size)

- bug fixes
	o text color 

29 july 2001
- bug fixes
	o multiple pages and layers supported
	o no use a temp file any more

8 July 2001
	- fill color, stroke color
	- different pattern (not all)
	- gradient
	- circle, pie and arc
	- good position of the element