@@ -1,3 +1,7 @@
+08 december 2001
+- features
+	o add a dialog box to change somes parameters.
+
 21 October 2001
 - features
 	o show grid if show grid option is enabled.
